# Ecodata-backend

./: .gitignore  Makefile  README.md  db_new.sql  ecodata_db_script.sql  mock_data.sql  pyproject.toml  ruff.toml  tmp.py
models/: models.py
src/: main.py  predictions.py
src/api/: __init__.py  deps.py  log.py  neural_models.py  plant.py
src/database/: dependencies.py  repository.py  session.py
src/database/models/: base.py  neural_models.py  plant.py
src/features/analyzer/: __init__.py  engine.py  inference.py  models.py  preprocessing.py  repository.py  router.py  schemas.py  service.py  ws_router.py  ws_session.py
src/features/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/biochemistry/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/files/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/jobs/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/leaves/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/locations/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/logs/: __init__.py  router.py
src/features/morphology/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/organizations/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/plants/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/research/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/researchers/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
src/features/taxonomy/: models.py  repository.py  router.py  schemas.py  (+1 more)
src/services/: base.py  predictions.py
src/shared/: auth_dependencies.py  auth_middleware.py  database.py  exceptions.py  models.py  repository.py  rustfs.py  schemas.py  service.py  types.py
src/shemas/: neural_model.py  plant.py
src/utils/: logger.py
test/: mock_data.py
