[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "numpy==1.26.4",
    "python-multipart>=0.0.26",
    "torch",
    "torchvision",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
torch = { path = "../../../Downloads/torch-2.0.1+cu117-cp310-cp310-win_amd64.whl" }
torchvision = { path = "../../../Downloads/torchvision-0.15.2+cu117-cp310-cp310-win_amd64.whl" }

[dependency-groups]
dev = [
    "sqlmodel>=0.0.38",
]
