[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "python-multipart>=0.0.26",
    "torch",
    "torchvision",
    "uvicorn>=0.44.0",
]


[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[dependency-groups]
dev = [
    "sqlmodel>=0.0.38",
]
