[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.26",
    "torch",
    "torchvision",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]


[tool.uv.sources]
torch = { index = "pytorch-cu117" }
torchvision = { index = "pytorch-cu117" }

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

# [tool.pyright]
# executionEnvironments = [
#     {  root = "src"}
# ]
[dependency-groups]
dev = [
    "sqlmodel>=0.0.38",
]
